crates/ast/src/snapshots/ast__lexer__tests__supere.snap
---
source: ast/src/lexer.rs
expression: tokens
---
[
    PositionToken {
        token: Package,
        line: 0,
        col: 0,
    },
    PositionToken {
        token: Identifier(
            "ch",
        ),
        line: 0,
        col: 8,
    },
    PositionToken {
        token: Dot,
        line: 0,
        col: 10,
    },
    PositionToken {
        token: Identifier(
            "emilycares",
        ),
        line: 0,
        col: 11,
    },
    PositionToken {
        token: Semicolon,
        line: 0,
        col: 21,
    },
    PositionToken {
        token: Import,
        line: 2,
        col: 0,
    },
    PositionToken {
        token: Identifier(
            "java",
        ),
        line: 2,
        col: 7,
    },
    PositionToken {
        token: Dot,
        line: 2,
        col: 11,
    },
    PositionToken {
        token: Identifier(
            "io",
        ),
        line: 2,
        col: 12,
    },
    PositionToken {
        token: Dot,
        line: 2,
        col: 14,
    },
    PositionToken {
        token: Identifier(
            "IOException",
        ),
        line: 2,
        col: 15,
    },
    PositionToken {
        token: Semicolon,
        line: 2,
        col: 26,
    },
    PositionToken {
        token: Public,
        line: 4,
        col: 0,
    },
    PositionToken {
        token: Class,
        line: 4,
        col: 7,
    },
    PositionToken {
        token: Identifier(
            "Super",
        ),
        line: 4,
        col: 13,
    },
    PositionToken {
        token: Extends,
        line: 4,
        col: 19,
    },
    PositionToken {
        token: Identifier(
            "IOException",
        ),
        line: 4,
        col: 27,
    },
    PositionToken {
        token: LeftParenCurly,
        line: 4,
        col: 39,
    },
    PositionToken {
        token: RightParenCurly,
        line: 5,
        col: 0,
    },
]
